# AAA

./: .gitignore  AI MODIFICATION PROMPT.md  PLAN.md  README.md  implementation_plan.md  improvement_plan.md  module1_nav_parser.py  module2_satellite_position_clock.py  module3_spp_solver.py  module4_continuous_analysis.py  module5_main_system_test.py  pyproject.toml  requirements.txt  rinex_gui.py  tarc1200.26b  tarc1210.26b  tarc1220.26b  tarc1230.26b  tarc1240.26b  tarc1250.26b  课程要求.md  项目说明与GUI使用指南.md
.claude/: settings.local.json
basic/: gui_scenario_runner.py  module1.py  module1_plan.md  module2.py  module3.py  module4.py  module5.py  rinex_gui.py
beidou_spp/: cli.py  config.py  integration_tests.py  models.py  pipeline.py  table.py
docs/: design_report.md  experiment_report.md  test_report.md  实验报告.md  设计报告.md
enhance/: README_enhance.md  compensate.py  dataset_builder.py  enhance_config.py  enhance_gui.py  evaluate_models.py  run_enhance.py  train_models.py
nav/: tarc0910.26b_cnav  tarc1210.26b_cnav  tarc1220.26b_cnav  tarc1230.26b_cnav  tarc1240.26b_cnav  tarc1250.26b_cnav  tarc1260.26b_cnav  tarc1270.26b_cnav  tarc1280.26b_cnav  tarc1290.26b_cnav  tarc1300.26b_cnav
output/: module1_ephemeris_list.csv  module1_nav_parse_summary.txt  module1_parsed_nav_debug.csv  module1_simulated_pseudorange.csv  module2_pseudorange_correction_debug.csv  module2_satellite_position_clock.csv  module2_satellite_position_summary.txt  module3_pseudorange_single_epoch.csv  module3_spp_result_single_epoch.txt  module4_continuous_position_results.csv  satellite_debug.csv  (+5 more)
(+138 files in other folders)
