[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beidou-spp"
version = "0.1.0"
description = "纯 Python 北斗 RINEX NAV SPP 全流程定位解算系统"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "PyQt5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beidou_spp*"]
